// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PreviewFooter Component is refreshing 1`] = `
<Styled(ViewNB)
  onLayout={[Function]}
>
  <FilterPopup
    onFilterThunk={[Function]}
    onRef={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
  />
  <Styled(Footer)>
    <Styled(FooterTab)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="menu"
          type="MaterialIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        disabled={true}
        onPress={[Function]}
        transparent={true}
      >
        <Styled(Icon)
          name="refresh"
          type="MaterialIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="comment-plus-outline"
          type="MaterialCommunityIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onLayout={[Function]}
        onLongPress={[Function]}
        onPress={[Function]}
      >
        <Styled(Icon)
          name="sort-descending"
          type="MaterialCommunityIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="view-list"
          type="MaterialIcons"
        />
      </Styled(Button)>
    </Styled(FooterTab)>
  </Styled(Footer)>
</Styled(ViewNB)>
`;

exports[`Testing PreviewFooter Component renders as expected with requiredProps 1`] = `
<Styled(ViewNB)
  onLayout={[Function]}
>
  <FilterPopup
    onFilterThunk={[Function]}
    onRef={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
  />
  <Styled(Footer)>
    <Styled(FooterTab)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="menu"
          type="MaterialIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="refresh"
          type="MaterialIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="comment-plus-outline"
          type="MaterialCommunityIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onLayout={[Function]}
        onLongPress={[Function]}
        onPress={[Function]}
      >
        <Styled(Icon)
          name="sort-descending"
          type="MaterialCommunityIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="view-list"
          type="MaterialIcons"
        />
      </Styled(Button)>
    </Styled(FooterTab)>
  </Styled(Footer)>
</Styled(ViewNB)>
`;

exports[`Testing PreviewFooter Component renders in muted 1`] = `
<Styled(ViewNB)
  onLayout={[Function]}
>
  <FilterPopup
    onFilterThunk={[Function]}
    onRef={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
  />
  <Styled(Footer)>
    <Styled(FooterTab)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="menu"
          type="MaterialIcons"
        />
      </Styled(Button)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="view-list"
          type="MaterialIcons"
        />
      </Styled(Button)>
    </Styled(FooterTab)>
  </Styled(Footer)>
</Styled(ViewNB)>
`;
